--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+</main>
+<footer>
 {% if site.github.is_project_page %}
 
 Maintained by {{ site.github.owner_name }}
@@ -7,3 +9,6 @@ Maintained by {{ site.github.owner_name }}
 
 
 Theme by julianolf
+</footer>
+</body>
+</html>
